--- a/PythonInterpreter/.vscode/settings.json
+++ b/PythonInterpreter/.vscode/settings.json
@@ -1,11 +1,20 @@
 {
     "editor.formatOnSave": true,
-    "python.defaultInterpreterPath": "/home/hebozhe/Dropbox/DevProjects/PyProjects/Lej/lej_venv/bin/python3.11",
+    "python.defaultInterpreterPath": "lej_venv/bin/python3.11",
     "python.linting.enabled": true,
     "python.analysis.typeCheckingMode": "strict",
     "python.linting.pylintEnabled": true,
     "python.linting.pycodestyleEnabled": true,
     "python.formatting.provider": "autopep8",
     "python.analysis.autoImportCompletions": true,
-    "python.analysis.importFormat": "relative"
+    "python.analysis.importFormat": "relative",
+    "python.linting.pycodestyleArgs": [
+        "--ignore=E501"
+    ],
+    "python.formatting.autopep8Args": [
+        "--max-line-length=2000"
+    ],
+    "python.linting.pylintArgs": [
+        "--max-line-length=2000"
+    ]
 }
